--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>PawTopia | About Us Page</title>
   <link rel="icon" type="img/png" href="pictures/pawicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleabout.css">
 </head>
 
 <body>
@@ -39,20 +39,43 @@
      </div>
   </header>
   <!-- START BELOW CONTENT -->
+  <section class="container">
+    <div class="slider-wrapper">
+      <div class="slides">
+        <div class="slide active" aria-hidden="false">
+          <div class="content">
+            <img src="pictures/placeholder.png" alt="Might be a photo of arlah">
+            <div class="text">
+              <h2>Jane Doe</h2>
+              <p>Co‑founder — Passionate about pets and product design. Short description goes here.</p>
+            </div>
+          </div>
+        </div>
 
+        <div class="slide" aria-hidden="true">
+          <div class="content">
+            <img src="pictures/placeholder.png" alt="Might be a photo of angelie">
+            <div class="text">
+              <h2>John Smith</h2>
+              <p>Head of Operations — Loves animals, logistics, and making customers happy.</p>
+            </div>
+          </div>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
+        <div class="slide" aria-hidden="true">
+          <div class="content">
+            <img src="pictures/placeholder.png" alt="Might be a photo of tite">
+            <div class="text">
+              <h2>Alex Lee</h2>
+              <p>Community Manager — Builds relationships and shares the PawTopia story.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
+  <script src="scriptabout.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
