--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PawTopia | Home Page</title>
   <link rel="icon" type="img/png" href="pictures/pawicon.png">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <!--<img src="pictures/bgmain.png">-->
   <header>
     <div class="logo">
       <a href="index.html">
         <img src="pictures/logotransparent.png" alt="PawTopia logo">
       </a>
     </div>
-    
+
     <div class="hamburger" id="hamburger">
       <img src="pictures/hamburger.png" alt="Menu">
     </div>
@@ -32,23 +34,33 @@
 
     <div class="icons">
       <div class="search-container">
-          <img src="pictures/searchicon.png" id="searchIcon">
-          <input type="text" id="searchInput" placeholder="Search...">
+        <img src="pictures/searchicon.png" id="searchIcon">
+        <input type="text" id="searchInput" placeholder="Search...">
       </div>
       <a href="cart.html"><img src="pictures/carticon.png"></a>
-     </div>
+    </div>
   </header>
   <!-- START BELOW CONTENT -->
 
-
-
-
-
-
-
-
-
+   <section class="hero">
+  <div class="hero-content">
+    <h2>WHERE</h2>
+    <h1>PAWS</h1>
+    <h2>MEET<br>PARADISE</h2>
+    <p>From treats to toys, find your pet's joy at PawTopia.</p>
+    <button class="hero-btn">Shop Now</button>
+  </div>
   
-  <script src="script.js"></script>
+  <div class="hero-image">
+    <img src="pictures/dog&cat.png">
+  </div>
+</section>
+
+  <section class="second">
+  <div class="top-categories">
+    <h3>TOP CATEGORIES</h3>
+  </div>
+
+
 </body>
 </html>
