--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PawTopia | Cart Page</title>
+  <title>PawTopia | Contact Page</title>
   <link rel="icon" type="img/png" href="pictures/pawicon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="stylecart.css">
+  <link rel="stylesheet" href="stylecontact.css">
 </head>
 
 <body>
@@ -54,7 +53,7 @@
     </div>
   </header>
   
-  <!-- START HERE CONTENT BELOW -->
+  <!-- START BELOW CONTENT -->
 
 
 
@@ -76,8 +75,9 @@
 
 
 
-<!--- FOOTER --->
-<footer class="footer">
+
+  <!--- FOOTER --->
+  <footer class="footer">
   <div class="footer-content">
     <div class="footer-left">
     <img src="pictures/logotransparent.png" alt="PawTopia logo" class="footer-logo">
