--- a/index.html
+++ b/index.html
@@ -3,41 +3,277 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PawTopia</title>
+  <title>PawTopia | Home Page</title>
+  <link rel="icon" type="img/png" href="pictures/pawicon.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-
-  <nav>
-    <div class="nav-left">
-      <div class="logo">
-        <img src="HomePageImg/logo2.png" alt="Pawtopia Logo">
-      </div>
-      <div class="search-bar">
-        <input type="text" placeholder="Search" />
-      </div>
+  <!--- HEADER --->
+  <header>
+    <div class="logo">
+      <a href="index.html">
+        <img src="pictures/logotransparent.png" alt="PawTopia logo">
+      </a>
     </div>
 
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="#">Cart</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+    <div class="hamburger" id="hamburger">
+      <img src="pictures/hamburger.png" alt="Menu">
+    </div>
 
+    <nav id="nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
+    <div class="icons">
+      <div class="search-container">
+        <img src="pictures/searchicon.png" id="searchIcon">
+        <input type="text" id="searchInput" placeholder="Search...">
+      </div>
+
+      <div class="user-container">
+        <img src="pictures/account.png" id="userIcon" alt="User">
+        <div class="login-dropdown" id="loginDropdown">
+          <form id="loginForm">
+            <input type="text" placeholder="Username" id="username">
+            <input type="password" placeholder="Password" id="password">
+            <button type="submit" class="login-btn">Login</button>
+          </form>
+        </div>
+      </div>
+
+      <a href="cart.html"><img src="pictures/carticon.png"></a>
+    </div>
+  </header>
+
+  <!-- START HERE CONTENT BELOW -->
   <section class="hero">
-    <div class="hero-left">
-      <img src="HomePageImg/dog.png" alt="Happy Dog">
     </div>
+    <div class="hero-content">
+      <div class="hero-left">
+        <h1>WHERE</h1>
+        <h1 class="paws-text">PAWS</h1>
+        <h1>MEET<br>PARADISE</h1>
+        <p class="subtitle">From treats to toys, find your pet's joy.</p>
+        <button class="shop-btn">shop now</button>
+      </div>
 
-    <div class="hero-right">
-      <h2>WELCOME</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at ipsum vitae lacus lobortis lacinia. Donec tristique arcu massa.</p>
-      <button>Learn More</button>
+      <div class="hero-right">
+        <img src="pictures/dog&cat.png" alt="Dog and Cat" class="pets-image">
+      </div>
     </div>
   </section>
 
+  <section class="top-categories">
+    <h2 style="color: #FFAE43">Top <span style="color: black">Categories</span></h2>
+
+    <div class="categories-container">
+      <button class="scroll-btn left">
+        < </button>
+
+          <div class="categories-wrapper">
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 1</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 2</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 3</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 4</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 5</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 6</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 7</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 8</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 9</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 10</h3>
+            </div>
+          </div>
+
+          <button class="scroll-btn right"> > </button>
+
+    </div>
+    <div class="banner">
+      <img src="https://i.pinimg.com/736x/58/a8/cc/58a8cce08e4193a25a05b0e4f045fa66.jpg"
+        alt="Might be an image of a banner">
+    </div>
+
+    <h2 style="color: #FFAE43">Best <span style="color: black">Sellers</span></h2>
+
+    <div class="categories-container">
+      <button class="scroll-btn left">
+        < </button>
+
+          <div class="categories-wrapper">
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 1</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 2</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 3</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 4</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 5</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 6</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 7</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 8</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 9</h3>
+            </div>
+            <div class="category-card"><img
+                src="https://ih1.redbubble.net/image.4569092814.2878/raf,750x1000,075,t,fafafa:ca443f4786.jpg">
+              <h3>Category 10</h3>
+            </div>
+          </div>
+
+          <button class="scroll-btn right"> > </button>
+
+          <script src="script.js"></script>
+  </section>
+
+  <section class="just-title">
+    <h2 style="color: #FFAE43">Latest <span style="color: black">Articles</span></h2>
+  </section>
+
+
+  <section class="latest-articles">
+    <div class="article-card">
+      <div class="article-image"></div>
+      <div class="article-content">
+        <h3>DID YOU KNOW?</h3>
+        <p class="source">
+          Source: <a href="http://petshop.com//086547601//waylami">http://petshop.com//086547601//waylami</a><br>
+          October 18, 2025 • 8:14 PM
+        </p>
+        <p class="description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at ipsum vitae lacus lobortis lacinia.
+          Donec tristique arcu massa, at facilisis lorem porta sed.
+        </p>
+        <button class="learn-more">Learn More</button>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="popular-brands">
+    <h2 style="color: #FFAE43">Popular <span style="color: black">Brands</span></h2>
+
+    <div class="brand-grid">
+      <div class="brand-box"><img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRv1OJ_0UmWrCck2uUwt5UUQOM_wgYLdwkkvd-6kkzn9GP-hMP7W0XgRDIptekonUYUkOY&usqp=CAU"
+          alt="might be a dog"></div>
+      <div class="brand-box"><img src="https://media.tenor.com/1lHhlSAd-CAAAAAM/good-talk.gif" alt="Dogs Plus"></div>
+      <div class="brand-box"><img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYnUSONpfKuWSSG0MM5SOJo4YiBfk5kMjFkw&s"
+          alt="Dogs Plus"></div>
+      <div class="brand-box"><img
+          src="https://scontent.fceb2-1.fna.fbcdn.net/v/t39.30808-6/560265067_1323932055877976_5263210087016704140_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=aa7b47&_nc_ohc=tTcVP22hCocQ7kNvwE58eu3&_nc_oc=AdlkuXZ7xEIdXbCyxeqtqZMaokLowfzau6Iz6p7CHrZEZ86XwZ0yE3NjhFPa33cbRNY&_nc_zt=23&_nc_ht=scontent.fceb2-1.fna&_nc_gid=pWho5-tpysfTcRRjofZh4A&oh=00_AfeSwV3TWqN_7YSlXUdQFn0cu4GDiTS99vLzFEUmomL5Kw&oe=68FA9181"
+          alt="Dogs Plus"></div>
+      <div class="brand-box"><img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSztxMsQXV42HxjI9Qt3vbzfo8ACoP8gDm4RQ&s"
+          alt="Dogs Plus"></div>
+    </div>
+  </section>
+
+  <!--- FOOTER --->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-left">
+        <img src="pictures/logotransparent.png" alt="PawTopia logo" class="footer-logo">
+        <p>If you have any questions, please <br>contact us at
+          <a href="mailto:support@example.com">support@example.com</a>
+        </p>
+        <div class="social-icons">
+          <a href="https://x.com/?lang=en">
+            <img src="pictures/twittard.png" alt="X">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="pictures/facebook.png" alt="Facebook">
+          </a>
+          <a href="https://www.instagram.com/?next=%2F">
+            <img src="pictures/instagram.png" alt="Instagram">
+          </a>
+          <a href="https://www.linkedin.com">
+            <img src="pictures/linkedin.png" alt="LinkedIn">
+          </a>
+        </div>
+        <p>&copy; 2025 PawTopia. All rights reserved.</p>
+      </div>
+
+      <div class="footer-right">
+        <div class="footer-column">
+          <h3>Shop now</h3>
+          <ul>
+            <li><a href="#">Dog</a></li>
+            <li><a href="#">Cat</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-column">
+          <h3>Customer Service</h3>
+          <ul>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 </html>
