--- a/products.html
+++ b/products.html
@@ -1,29 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>PawTopia | Products Page</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PawTopia | Products Page</title>
+  <link rel="icon" type="img/png" href="pictures/pawicon.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="styleproducts.css">
+</head>
 
 <body>
-  <nav>
-    <div class="nav-left">
-      <div class="logo">
-        <img src="HomePageImg/logo2.png" alt="Pawtopia Logo">
-      </div>
-      <div class="search-bar">
-        <input type="text" placeholder="Search" />
-      </div>
+  <!--- HEADER --->
+  <header>
+    <div class="logo">
+      <a href="index.html">
+        <img src="pictures/logotransparent.png" alt="PawTopia logo">
+      </a>
     </div>
 
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="cart.html">Cart</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+    <div class="hamburger" id="hamburger">
+      <img src="pictures/hamburger.png" alt="Menu">
+    </div>
+
+    <nav id="nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
+    <div class="icons">
+      <div class="search-container">
+        <img src="pictures/searchicon.png" id="searchIcon">
+        <input type="text" id="searchInput" placeholder="Search...">
+      </div>
+
+      <div class="user-container">
+        <img src="pictures/account.png" id="userIcon" alt="User">
+        <div class="login-dropdown" id="loginDropdown">
+          <form id="loginForm">
+            <input type="text" placeholder="Username" id="username">
+            <input type="password" placeholder="Password" id="password">
+            <button type="submit" class="login-btn">Login</button>
+          </form>
+        </div>
+      </div>
+
+      <a href="cart.html"><img src="pictures/carticon.png"></a>
+    </div>
+  </header>
+  
+  <!-- START HERE CONTENT BELOW -->
+  <section class="hero">
+  </div>
+    <div class="hero-content">
+      <div class="hero-left">
+        <h1>PRODUCTS PLACEHOLDER PANI</h1>
+      </div>
+
+      <div class="hero-right">
+        <img src="https://media.tenor.com/t3dLLNaI50oAAAAM/cat-cats.gif" alt="Dog and Cat" class="pets-image">
+      </div>
+    </div>
+  </section>
+
+
+   <section class="advertisement">
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="pictures/about1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="pictures/about2.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+   </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--- FOOTER --->
+  <footer class="footer">
+  <div class="footer-content">
+    <div class="footer-left">
+    <img src="pictures/logotransparent.png" alt="PawTopia logo" class="footer-logo">
+    <p>If you have any questions, please <br>contact us at 
+      <a href="mailto:support@example.com">support@example.com</a></p>
+      <div class="social-icons">
+        <a href="https://x.com/?lang=en">
+          <img src="pictures/twittard.png" alt="X">
+        </a>
+        <a href="https://www.facebook.com">
+          <img src="pictures/facebook.png" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/?next=%2F">
+          <img src="pictures/instagram.png" alt="Instagram">
+        </a>
+        <a href="https://www.linkedin.com">
+          <img src="pictures/linkedin.png" alt="LinkedIn">
+        </a>
+      </div>
+    <p>&copy; 2025 PawTopia. All rights reserved.</p>
+    </div>
+
+    <div class="footer-right">
+        <div class="footer-column">
+          <h3>Shop now</h3>
+          <ul>
+            <li><a href="#">Dog</a></li>
+            <li><a href="#">Cat</a></li>
+          </ul>
+        </div>
+        
+        <div class="footer-column">
+          <h3>Customer Service</h3>
+          <ul>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+</body>
 </html>
