--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<!-- PawTopia - contact.html (Contact page) -->
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,13 +20,13 @@
         <img src="pictures/logotransparent.png" alt="PawTopia logo">
       </a>
     </div>
-
     <div class="hamburger" id="hamburger">
       <img src="pictures/hamburger.png" alt="Menu">
     </div>
 
     <nav id="nav">
       <ul>
+
         <li><a href="index.html">Home</a></li>
         <li><a href="products.html">Products</a></li>
         <li><a href="about.html">About</a></li>
@@ -52,63 +54,127 @@
       <a href="cart.html"><img src="pictures/carticon.png"></a>
     </div>
   </header>
-  
+
   <!-- START BELOW CONTENT -->
+  <!--CONTACT TITLE SECTION-->
+  <div class="contact-hero">
+    <h1>Contact</h1>
+    <p>We'd love to hear from you — your pet's happiness is our priority!</p>
+  </div>
 
+  <!--FAQ SECTION-->
+  <section class="faq-section">
+    <h2 class="faq-subtitle">Frequently Asked Questions</h2>
 
+    <div class="faq-container">
+      <!-- CARD 1 -->
+      <div class="flip-card">
+        <div class="flip-inner">
+          <div class="flip-front orange">
+            Does the store sell foods for different types of pets, in my case snakes?
+          </div>
+          <div class="flip-back gray">
+            Yes, fortunately the store sells different kinds of feeds to satisfy your pets.
+          </div>
+        </div>
+      </div>
 
+      <!-- CARD 2 -->
+      <div class="flip-card">
+        <div class="flip-inner">
+          <div class="flip-front gray">
+            Is it okay to put a hamster in a blender to make a smoothie?
+          </div>
+          <div class="flip-back orange">
+            Absolutely not recommended, but do tell me the taste if you did it.
+          </div>
+        </div>
+      </div>
 
+      <!-- CARD 3 -->
+      <div class="flip-card">
+        <div class="flip-inner">
+          <div class="flip-front orange">
+            What if nagmahal ka ng taong bawal mahalin?
+          </div>
+          <div class="flip-back gray">
+            Wag kanang mag mahal, walang forever sa mundong ito puro hinanakit lang dito.
+          </div>
+        </div>
+      </div>
 
+      <!-- CARD 4 -->
+      <div class="flip-card">
+        <div class="flip-inner">
+          <div class="flip-front gray">
+            Does the store sell aquatic pets such as a fish that has no teeth?
+          </div>
+          <div class="flip-back orange">
+            Whatever you are thinking, don’t. Just don’t — please don’t violate the fish :(
+          </div>
+        </div>
+      </div>
+    </div>
 
+    <!-- HELP ASSISTANCE FORM -->
+      <div class="help-section">
+      <h2 class="help-title">Didn't find what you're looking for? Fill the form below.</h2>
+      <form class="help-form" id="helpForm">
+        <div class="form-row">
+          <input type="text" id="name" placeholder="Your Name" required>
+          <input type="email" id="email" placeholder="Your Email" required>
+        </div>
 
+        <textarea id="message" placeholder="Message..." required></textarea>
 
+        <div class="checkbox-row">
+          <input type="checkbox" id="consent" required>
+          <label for="consent">
+            I agree and consent to the collection, use or otherwise processing of my personal data by International Toyworld, Inc. and its service group.
+          </label>
+        </div>
 
-
-
-
-
-
-
-
-
-
-
-
+        <button type="submit" id="sendButton">Send Message</button>
+        <p id="thankYouMessage" class="hidden">Message sent! Thank you for your feedback. 🐾</p>
+      </form>
+    </div>
+  </section>
 
 
   <!--- FOOTER --->
   <footer class="footer">
-  <div class="footer-content">
-    <div class="footer-left">
-    <img src="pictures/logotransparent.png" alt="PawTopia logo" class="footer-logo">
-    <p>If you have any questions, please <br>contact us at 
-      <a href="mailto:support@example.com">support@example.com</a></p>
-      <div class="social-icons">
-        <a href="https://x.com/?lang=en">
-          <img src="pictures/twittard.png" alt="X">
-        </a>
-        <a href="https://www.facebook.com">
-          <img src="pictures/facebook.png" alt="Facebook">
-        </a>
-        <a href="https://www.instagram.com/?next=%2F">
-          <img src="pictures/instagram.png" alt="Instagram">
-        </a>
-        <a href="https://www.linkedin.com">
-          <img src="pictures/linkedin.png" alt="LinkedIn">
-        </a>
+    <div class="footer-content">
+      <div class="footer-left">
+        <img src="pictures/logotransparent.png" alt="PawTopia logo" class="footer-logo">
+        <p>If you have any questions, please <br>contact us at
+          <a href="mailto:support@example.com">pawtopia@gmail.com</a>
+        </p>
+        <div class="social-icons">
+          <a href="https://x.com/?lang=en">
+            <img src="pictures/twittard.png" alt="X">
+          </a>
+          <a href="https://www.facebook.com">
+            <img src="pictures/facebook.png" alt="Facebook">
+          </a>
+          <a href="https://www.instagram.com/?next=%2F">
+            <img src="pictures/instagram.png" alt="Instagram">
+          </a>
+          <a href="https://www.linkedin.com">
+            <img src="pictures/linkedin.png" alt="LinkedIn">
+          </a>
+        </div>
+        <p>&copy; 2025 Pawtopia. All rights reserved.</p>
       </div>
-    <p>&copy; 2025 PawTopia. All rights reserved.</p>
-    </div>
 
-    <div class="footer-right">
+      <div class="footer-right">
         <div class="footer-column">
           <h3>Shop now</h3>
           <ul>
-            <li><a href="#">Dog</a></li>
-            <li><a href="#">Cat</a></li>
+            <li><a href="products.html?category=dog">Dog</a></li>
+            <li><a href="products.html?category=cat">Cat</a></li>
           </ul>
         </div>
-        
+
         <div class="footer-column">
           <h3>Customer Service</h3>
           <ul>
@@ -118,9 +184,13 @@
         </div>
       </div>
     </div>
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
   <script src="script.js"></script>
+
+
 </body>
 
 </html>
