--- a/cart.html
+++ b/cart.html
@@ -114,27 +114,99 @@
     </div>
   </div>
 
-  <!-- RECENTLY VIEWED -->
+<!-- RECENTLY VIEWED -->
   <div class="recently-viewed">
-    <h2>Recently Viewed</h2>
+    <h2>You may also like</h2>
     <div class="products-grid">
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1589924691995-400dc9ecc119?w=300&h=300&fit=crop" alt="King Adult Dog Food">
-        <h3>King Adult Dog Food - All Type Recipe per 2kg</h3>
-        <p class="price">₱ 230.00</p>
-        <button class="add-to-cart-btn">ADD TO CART</button>
+      <!-- Card 1: matches Products page structure -->
+      <div class="product-card text-center" data-description="Protein-rich, biologically appropriate kibble made from fresh regional ingredients.">
+        <img src="pictures/products/drydogfood2.png" alt="Orijen Adult Dog Food">
+        <p class="text-muted small mb-1">Dry Dog Food</p>
+        <p class="fw-semibold mb-1">Orijen Adult Dog Food</p>
+        <p class="price fw-bold text-orange">₱990.00</p>
+        <div class="product-actions">
+          <button class="btn btn-outline-dark btn-sm btn-view">VIEW</button>
+          <button class="btn btn-dark btn-sm btn-add-cart">ADD TO CART</button>
+        </div>
       </div>
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1589924691995-400dc9ecc119?w=300&h=300&fit=crop" alt="King Adult Dog Food">
-        <h3>King Adult Dog Food - All Type Recipe per 2kg</h3>
-        <p class="price">₱ 230.00</p>
-        <button class="add-to-cart-btn">ADD TO CART</button>
+
+      <!-- Card 2 -->
+      <div class="product-card text-center" data-description="Premium indoor adult cat kibble formulated for healthy digestion and hairball reduction.">
+        <img src="pictures/products/dfcroyalcanin.png" alt="Royal Canin Adult Dry Food">
+        <p class="text-muted small mb-1">Dry Cat Food</p>
+        <p class="fw-semibold mb-1">Royal Canin Adult Dry Food</p>
+        <p class="price fw-bold text-orange">₱500.00</p>
+        <div class="product-actions">
+          <button class="btn btn-outline-dark btn-sm btn-view">VIEW</button>
+          <button class="btn btn-dark btn-sm btn-add-cart">ADD TO CART</button>
+        </div>
       </div>
-      <div class="product-card">
-        <img src="https://images.unsplash.com/photo-1589924691995-400dc9ecc119?w=300&h=300&fit=crop" alt="King Adult Dog Food">
-        <h3>King Adult Dog Food - All Type Recipe per 2kg</h3>
-        <p class="price">₱ 230.00</p>
-        <button class="add-to-cart-btn">ADD TO CART</button>
+
+      <!-- Card 3 -->
+      <div class="product-card text-center" data-description="Dental chews designed to help reduce plaque and tartar while freshening breath for large dogs.">
+        <img src="pictures/products/dtreatsdentastix.png" alt="Pedigree Dentastix Large">
+        <p class="text-muted small mb-1">Dental Treats</p>
+        <p class="fw-semibold mb-1">Pedigree Dentastix Large</p>
+        <p class="price fw-bold text-orange">₱115.00</p>
+        <div class="product-actions">
+          <button class="btn btn-outline-dark btn-sm btn-view">VIEW</button>
+          <button class="btn btn-dark btn-sm btn-add-cart">ADD TO CART</button>
+        </div>
+      </div>
+
+      <div class="product-card text-center" data-description="Flavorful chewy sticks ideal for training rewards and light snacking for dogs.">
+        <img src="pictures/products/streatsstick.png" alt="Sleeky Chewy Stick Snacks">
+        <p class="text-muted small mb-1">Dog Treats</p>
+        <p class="fw-semibold mb-1">Sleeky Chewy Stick Snacks</p>
+        <p class="price fw-bold text-orange">₱140.00</p>
+        <div class="product-actions">
+          <button class="btn btn-outline-dark btn-sm btn-view">VIEW</button>
+          <button class="btn btn-dark btn-sm btn-add-cart">ADD TO CART</button>
+        </div>
+      </div>
+
+      <div class="product-card text-center" data-description="Crunchy bite-sized treats made with real ingredients; great for rewarding good behavior.">
+        <img src="pictures/products/streatshalo.png" alt="Halo Meal Bites">
+        <p class="text-muted small mb-1">Treats</p>
+        <p class="fw-semibold mb-1">Halo Meal Bites</p>
+        <p class="price fw-bold text-orange">₱75.00</p>
+        <div class="product-actions">
+          <button class="btn btn-outline-dark btn-sm btn-view">VIEW</button>
+          <button class="btn btn-dark btn-sm btn-add-cart">ADD TO CART</button>
+        </div>
+      </div>
+
+      <div class="product-card text-center" data-description="Savory chicken wet food formulated to support adult cats daily hydration and nutrition.">
+        <img src="pictures/products/wetcatfood2.png" alt="Whiskas Chicken Adult">
+        <p class="text-muted small mb-1">Wet Cat Food</p>
+        <p class="fw-semibold mb-1">Whiskas Chicken Adult</p>
+        <p class="price fw-bold text-orange">₱250.00</p>
+        <div class="product-actions">
+          <button class="btn btn-outline-dark btn-sm btn-view">VIEW</button>
+          <button class="btn btn-dark btn-sm btn-add-cart">ADD TO CART</button>
+        </div>
+      </div>
+
+      <div class="product-card text-center" data-description="Dental chews designed to help reduce plaque and tartar while freshening breath for large dogs.">
+        <img src="pictures/products/dtreatsdentastix.png" alt="Pedigree Dentastix Large">
+        <p class="text-muted small mb-1">Dental Treats</p>
+        <p class="fw-semibold mb-1">Pedigree Dentastix Large</p>
+        <p class="price fw-bold text-orange">₱115.00</p>
+        <div class="product-actions">
+          <button class="btn btn-outline-dark btn-sm btn-view">VIEW</button>
+          <button class="btn btn-dark btn-sm btn-add-cart">ADD TO CART</button>
+        </div>
+      </div>
+
+      <div class="product-card text-center" data-description="Dental chews designed to help reduce plaque and tartar while freshening breath for large dogs.">
+        <img src="pictures/products/dtreatsdentastix.png" alt="Pedigree Dentastix Large">
+        <p class="text-muted small mb-1">Dental Treats</p>
+        <p class="fw-semibold mb-1">Pedigree Dentastix Large</p>
+        <p class="price fw-bold text-orange">₱115.00</p>
+        <div class="product-actions">
+          <button class="btn btn-outline-dark btn-sm btn-view">VIEW</button>
+          <button class="btn btn-dark btn-sm btn-add-cart">ADD TO CART</button>
+        </div>
       </div>
     </div>
   </div>
@@ -150,6 +222,33 @@
       </div>
     </div>
   </section>
+  
+  <!-- PRODUCT DETAIL MODAL (Bootstrap) for Cart page -->
+  <div class="modal fade" id="productModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="pmTitle"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="pm-content">
+            <div class="pm-image">
+              <img id="pmImg" alt="" />
+            </div>
+            <div class="pm-details">
+              <p class="pm-category" id="pmCategory"></p>
+              <div class="product-rating" id="pmRating"></div>
+              <p class="pm-price text-orange" id="pmPrice"></p>
+              <p class="pm-desc" id="pmDesc"></p>
+              <button class="btn btn-dark" id="pmAddToCart">ADD TO CART</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 
   <!--- FOOTER --->
   <footer class="footer">
