--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,10 @@
       <div class="flip-card">
         <div class="flip-inner">
           <div class="flip-front orange">
-            Does the store sell foods for different types of pets, in my case snakes?
+            What payment methods do you accept?
           </div>
           <div class="flip-back gray">
-            Yes, fortunately the store sells different kinds of feeds to satisfy your pets.
+            We accept credit/debit cards, GCash, Maya, bank transfers, and cash on delivery (COD) for selected areas.
           </div>
         </div>
       </div>
@@ -83,10 +83,10 @@
       <div class="flip-card">
         <div class="flip-inner">
           <div class="flip-front gray">
-            Is it okay to put a hamster in a blender to make a smoothie?
+            Can I change or cancel my order after placing it?
           </div>
           <div class="flip-back orange">
-            Absolutely not recommended, but do tell me the taste if you did it.
+            Orders can only be modified or canceled within 1 hour after checkout. Please contact our customer support immediately.
           </div>
         </div>
       </div>
@@ -95,10 +95,10 @@
       <div class="flip-card">
         <div class="flip-inner">
           <div class="flip-front orange">
-            What if nagmahal ka ng taong bawal mahalin?
+            Do you offer same-day delivery?
           </div>
           <div class="flip-back gray">
-            Wag kanang mag mahal, walang forever sa mundong ito puro hinanakit lang dito.
+            Yes, for Metro Cebu and nearby areas, same-day delivery is available if you order before 2:00 PM.
           </div>
         </div>
       </div>
@@ -107,10 +107,10 @@
       <div class="flip-card">
         <div class="flip-inner">
           <div class="flip-front gray">
-            Does the store sell aquatic pets such as a fish that has no teeth?
+            What if my order is damaged or incorrect?
           </div>
           <div class="flip-back orange">
-            Whatever you are thinking, don’t. Just don’t — please don’t violate the fish :(
+            Contact us within 48 hours of delivery with photos of the item. We’ll arrange a replacement or refund right away.
           </div>
         </div>
       </div>
