--- a/products.html
+++ b/products.html
@@ -60,16 +60,13 @@
   <div id="carouselExample" class="carousel slide mb-5" data-bs-ride="carousel" data-bs-interval="4000" data-bs-wrap="true">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="pictures/carousel1.png" class="d-block w-100" alt="this should work banner but why is it not">
+          <img src="pictures/banner1.png" class="d-block w-100" alt="this should work banner but why is it not">
         </div>
         <div class="carousel-item">
-          <img src="pictures/carousel2.png" class="d-block w-100" alt="Banner 2">
+          <img src="pictures/banner2.png" class="d-block w-100" alt="Banner 2">
         </div>
         <div class="carousel-item">
-          <img src="pictures/carousel3.png" class="d-block w-100" alt="Banner 2">
-        </div>
-        <div class="carousel-item">
-          <img src="pictures/carousel4.png" class="d-block w-100" alt="Banner 2">
+          <img src="pictures/banner3.png" class="d-block w-100" alt="Banner 2">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
