--- a/products.html
+++ b/products.html
@@ -44,8 +44,8 @@
         <img src="pictures/account.png" id="userIcon" alt="User">
         <div class="login-dropdown" id="loginDropdown">
           <form id="loginForm">
-            <input type="text" placeholder="Username" id="username">
-            <input type="password" placeholder="Password" id="password">
+            <input type="text" placeholder="Username *user" id="username">
+            <input type="password" placeholder="Password *123" id="password">
             <button type="submit" class="login-btn">Login</button>
           </form>
         </div>
@@ -160,11 +160,11 @@
       </h6>
 
       <div class="collapse" id="brandCollapse">
-        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand1"><label class="form-check-label" for="brand1">Brand 1</label></div>
-        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand2"><label class="form-check-label" for="brand2">Brand 2</label></div>
-        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand3"><label class="form-check-label" for="brand3">Brand 3</label></div>
-        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand4"><label class="form-check-label" for="brand4">Brand 4</label></div>
-        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand5"><label class="form-check-label" for="brand5">Brand 5</label></div>
+        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand1"><label class="form-check-label" for="brand1">Pedigree</label></div>
+        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand2"><label class="form-check-label" for="brand2">Royal Canin</label></div>
+        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand3"><label class="form-check-label" for="brand3">Purina</label></div>
+        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand4"><label class="form-check-label" for="brand4">Whiskas</label></div>
+        <div class="form-check"><input type="checkbox" class="form-check-input" id="brand5"><label class="form-check-label" for="brand5">Orijen</label></div>
       </div>
     </div>
 
